# dgt-haskell

./: .gitignore  CHANGELOG.md  NEW_TUTORIAL.md  README.md  TUTORIAL.md  dgt-haskell.cabal
examples/: hello-world.dgt
src/: Lang.hs  Lib.hs  Main.hs  Parsers.hs
